# media_fusion

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
cmake/: boost.cmake  gflag.cmake  glog.cmake  gtest.cmake
doc/: file_convert.md  file_info.md  file_management.md  media_transcoding.md  qt_interface.md  test.md  目录介绍.md
doc/test/: 测试.md
file_analysis/: CMakeLists.txt  aac_file.cc  aac_file.h  wav_file.cc  wav_file.h
file_convert/: CMakeLists.txt  file_convert.cc  file_convert.h
file_info/: CMakeLists.txt  file_info.cc  file_info.h
file_management/: CMakeLists.txt  aac_file.cc  aac_file.h  file_base.h  file_management.cc  file_management.h  wav_file.cc
qt_interface/: CMakeLists.txt  main_window.cc  main_window.h
test/: CMakeLists.txt  file_analysis_test.cc  file_convert_test.cc  file_info_test.cc  file_management_test.cc  main_test.cc  qt_interface_test.cc
test/file_management_test/: aac_file_test.cc
test/test_file/: test_aac.aac
